# tiny-graphics-assignments9

./: CMakeLists.txt  README.md  build.sh
examples/: CMakeLists.txt
examples/mac-main/: CMakeLists.txt  mac-main.mm
examples/one-frame/: CMakeLists.txt  main.py
examples/yolo-screen/: CMakeLists.txt  main.py  yolo_tf.py
include/: DeepCapture.h  MacDisplayCapture.h  PixelBuffer.h
src/: DeepCapture.cpp  MacDisplayCapture.mm
swig/: CMakeLists.txt  DeepCapture.i  numpy.i  setup.py
